<resources>
    <string name="app_name">unicafe</string>
    <string name="btnAcceder">Acceder</string>
    <string name="txtPassword">Contraseña</string>
    <string name="txtRagistrar">Registrar</string>
    <string name="txtUsuario">correo</string>
    <string name="txtUNombre">Nombre de usuario</string>
    <string name="txtCorreo">Correo electrónico</string>
    <string name="txtpass">Contraseña</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnPedidos">Pedidos</string>
    <string name="txtNombre">Nombre de Comida</string>
    <string name="txtPrecio">Precio</string>
    <string name="txtDescripcion">Descripción</string>
    <string name="btnAgregar">Agregar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="btnActualizar">Actrualizar</string>
    <string name="txtMenu">MENÚ</string>
    <string name="txtHistorial">HISTORIAL</string>
    <string name="txtComidas">COMIDAS</string>
    <string name="txtDescripcionImg">Descripcion de la imagen </string>
    <string name="edtNombre">Nombre del producto</string>
    <string name="edtPrecio">Precio</string>
    <string name="edtDescripcion">Descripción</string>
    <string name="btnAgregarr">Agregar</string>
    <string name="btnDestacar">Destacar</string>
    <string name="txtPedidos">Pedidos</string>
    <string name="btnAddImg">Agregar Imagen</string>
    <string name="btnRealizarPedido">Realizar Pedido</string>
    <string name="btnOrdenar">Ordenar</string>
    <string name="btnCerrar">Cerrar</string>
    <string name="btnRefrescar">Refrescar</string>
    <string name="txtTitulo">"\n"UNICAFE</string>
    <string name="txtTelefono">Telefono</string>
    <string name="txtProducPedido">Producto pedido</string>
    <string name="txtPrecioPedido">Precio del producto</string>
    <string name="txtCantidadPedido">Cantidad de producto</string>
    <string name="txtSubtotal">Subtotal del pedido</string>
    <string name="txtTotal">Total: </string>
    <string name="imgPedidos">Pedidos</string>
    <string name="btnInstalaciones">Instalaciones</string>>
    <string name="txtInstalaciones">Visitanos!!!, ven y conoce nuestras instalaciones, te esperamos</string>
    <string name="btnSalir">Cerrar sesion</string>


</resources>