<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFE4D2">

    <Button
        android:id="@+id/btnRefrescar"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#6D4C41"
        android:text="@string/btnRefrescar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgPedidos"
        android:layout_width="411dp"
        android:layout_height="116dp"
        android:contentDescription="@string/imgPedidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logopedidos" />

    <Button
        android:id="@+id/btnSalirAdmin"
        android:layout_width="139dp"
        android:layout_height="38dp"
        android:backgroundTint="#6D4C41"
        android:text="@string/btnSalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvPedidosAdmin"
        android:layout_width="409dp"
        android:layout_height="516dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPedidos" />

</androidx.constraintlayout.widget.ConstraintLayout>