<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFE4D2"
    tools:context=".Vista.login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="299dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"

        android:adjustViewBounds="false"
        android:background="#EFE4D2"
        android:paddingHorizontal="30dp"
        android:paddingVertical="0dp"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891"
        app:srcCompat="@drawable/tazalogin"
        tools:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="267dp"
        android:layout_height="338dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="17dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF">

            <EditText
                android:id="@+id/edtUsuario"
                android:layout_width="234dp"
                android:layout_height="51dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="71dp"
                android:ems="10"
                android:hint="@string/txtUsuario"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.55"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtRegistrar"
                android:layout_width="232dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:text="@string/txtRagistrar"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"

                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/btnAcceder"
                app:layout_constraintHorizontal_bias="0.75"
                app:layout_constraintStart_toStartOf="@+id/btnAcceder"
                app:layout_constraintTop_toBottomOf="@+id/btnAcceder" />

            <Button
                android:id="@+id/btnAcceder"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="#6D4C41"
                android:text="@string/btnAcceder"
                app:layout_constraintEnd_toEndOf="@+id/tilPasswordContainer"
                app:layout_constraintStart_toStartOf="@+id/tilPasswordContainer"
                app:layout_constraintTop_toBottomOf="@+id/tilPasswordContainer" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPasswordContainer"
                android:layout_width="234dp"
                android:layout_height="51dp"
                android:layout_marginTop="48dp"
                android:hint="@string/txtPassword"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.551"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtUsuario"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#795548">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="234dp"
                    android:layout_height="48dp"
                    android:inputType="textPassword"
                    android:textColor="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="411dp"
        android:layout_height="69dp"
        android:background="#8C6844"
        android:text="@string/txtTitulo"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>