<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtModificar"
        android:layout_width="163dp"
        android:layout_height="44dp"
        android:layout_marginTop="88dp"
        android:text="Modificar CRUD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="274dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/txtNombre"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/txtModificar"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="@+id/txtModificar"
        app:layout_constraintTop_toBottomOf="@+id/txtModificar" />

    <EditText
        android:id="@+id/edtPrecio"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/txtPrecio"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/edtNombre"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/edtNombre"
        app:layout_constraintTop_toBottomOf="@id/edtNombre" />

    <EditText
        android:id="@+id/edtDescripcion"
        android:layout_width="274dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/txtDescripcion"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/edtPrecio"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtPrecio"
        app:layout_constraintTop_toBottomOf="@+id/edtPrecio" />

    <TextView
        android:id="@+id/txtImagen"
        android:layout_width="80dp"
        android:layout_height="24dp"
        android:layout_marginTop="44dp"
        android:text="Imagen"
        app:layout_constraintEnd_toEndOf="@+id/edtDescripcion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/edtDescripcion" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:text="Agregar"
        app:layout_constraintEnd_toEndOf="@+id/txtImagen"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtImagen" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="112dp"
        android:text="Eliminar"
        app:layout_constraintEnd_toStartOf="@+id/btnActualizar"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="@+id/btnAgregar"
        app:layout_constraintTop_toBottomOf="@+id/edtDescripcion" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="117dp"
        android:layout_height="49dp"
        android:layout_marginTop="112dp"
        android:text="Actualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtDescripcion" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="384dp"
        android:layout_height="184dp"
        tools:layout_editor_absoluteX="12dp"
        tools:layout_editor_absoluteY="530dp" />

</androidx.constraintlayout.widget.ConstraintLayout>